# bindgen-static-example

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  main.cpp
